--- a/index.html
+++ b/index.html
@@ -11,29 +11,95 @@
 <script src="js/external/backbone.js"></script>
 
 <script>
-  Book = Backbone.Model.extend({
-     initialize: function(){
+Book = Backbone.Model.extend({
+    // urlRoot: 'http://localhost:8080/books/',
+    initialize: function(){
         this.on("change", function(){
             console.log('Model Changes Detected:');
-            if (this.hasChanged('name')) {
-                console.log('The name has changed');
+            if (this.hasChanged('title')) {
+                console.log('The title has changed');
+                }
+            if (this.hasChanged('year')) {
+                console.log('The year has changed');
             }
         });
-        this.on("change:name", function(){
-            console.log('The name attribute has changed');
+        this.on("invalid", function(model, error){
+            console.log("**Validation Error : " + error + "**");
         });
-     },
-     defaults: {
-         name: 'Book Titles',
-         author: 'No one'
-     },
-     printDetails: function(){
-              console.log(this.get('name') + ' by ' + this.get('author'));
-          }
+        this.on("change:title", function(){
+            console.log('The title attribute has changed');
+        });
+    },
+    defaults: {
+        title: 'Book Titles',
+        author: 'No one',
+        year: 2000
+    },
+    printDetails: function(){
+        console.log(this.get('title') + ' by ' + this.get('author'));
+    },
+    validate: function(attrs) {
+        if (attrs.year<2000) {
+            return 'Year must be after 2000';
+        }
+        if (!attrs.title) {
+            return 'A title must be provided';
+        }
+    },
+    parse: function(response, xhr){
+        response.bookType = 'eBook';
+        return response;
+    }
 });
-thisBook = new Book();
-console.log(thisBook.get('name') + ' by ' + thisBook.get('author'));
-thisBook.set('name', 'function');
+
+Library = Backbone.Collection.extend({
+    model:Book,
+    initialize: function(){
+        console.log('Creating a new Library');
+    }
+});
+
+// thisBook = new Book();
+// thisBook.save(thisBook.attributes, 
+//     {
+//         success: function(model, response, options) {
+//             console.log('Model saved');
+//             console.log('Id: '+ thisBook.get('id'));
+//         },
+//         error: function(model, xhr, options){
+//             console.log('Failed to save model');
+//         }
+//     });
+// thisBook.fetch({
+//     success: function(model, response, options){
+//         console.log(JSON.stringify(response));
+//         console.log(response);
+//         console.log('fetch success');
+//     },
+//     error: function(model, response, options){
+//         console.log('fetch error');
+//     }
+// });
+
+// thisBook.destroy({
+//     success: function(model, response, options) {
+//         console.log('destroy success');
+//     },
+//     error: function(model, response, options) {
+//         console.log('destroy failed');
+//     },
+//     wait: true
+// });
+
+bookOne = new Book({title:'Beginning Backbone', author: 'James Sugrue'});
+bookTwo = new Book({title: 'Pro Javascript Design Pattern', author: 'Dus'});
+thisLibrary = new Library([bookOne]);
+console.log('Library contains '+thisLibrary.length+' books');
+thisLibrary.add(bookTwo);
+console.log('Library contains '+thisLibrary.length+' books');
+thisLibrary.set([bookTwo]);
+console.log('Library contains '+thisLibrary.length+' books');
+
 </script>
 </body>
 </html>
