--- a/index.html
+++ b/index.html
@@ -2,164 +2,53 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>My App</title>
+    <title>Beginning Backbone Twitter Example</title>
+    <link rel="stylesheet" type="text/css" href="css/metro.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- any other css file here -->
 </head>
-<body>
+<body class='metrouicss'>
+<!-- HTML content and div placeholders-->
+<div id='timeline' class='timeline-view'>
+     <h2>My Tweets</h2>
+</div>
 
+<!-- Handlebars templates -->
+<script type="text/x-handlebars-template" id="timeline-template">
+ <ul class='listview'>
+        {{#each tweet}}
+        <li>
+          <div class='icon'>
+            <img src='{{user.profile_image_url}}'></img>
+          </div>
+            <div class='data'>
+              <h4>{{user.name}}</h4>
+              <p>{{format text}}</p>
+              <p class="timestamp"><i>{{friendlyDate}}</i></p>
+            </div>
+        </li>
+        {{/each}}
+    </ul>
+ </script>
+
+<!-- External library Includes -->
 <script src="js/external/jquery.js"></script>
 <script src="js/external/underscore.js"></script>
 <script src="js/external/backbone.js"></script>
+<script src="js/external/handlebars-v3.0.1.js"></script>
+<script src="js/external/moment.js"></script>
+<!-- Model -->
+<script src="js/app/model/Tweet.js"></script>
+<!-- Collections -->
+<script src="js/app/collection/Timeline.js"></script>
+<!-- View -->
+<script src="js/app/view/TimelineView.js"></script>
+<!-- Router -->
+<!-- <script src="js/app/router/AppRouter.js"></script> -->
+<!-- Util --> 
+<script src="js/app/util/helpers.js"></script>
 
-
-<div id="myLibraryViewSection"></div>
-<script>
-Book = Backbone.Model.extend({
-    // urlRoot: 'http://localhost:8080/books/',
-    initialize: function(){
-        this.on("change", function(){
-            console.log('Model Changes Detected:');
-            if (this.hasChanged('title')) {
-                console.log('The title has changed');
-                }
-            if (this.hasChanged('year')) {
-                console.log('The year has changed');
-            }
-        });
-        this.on("invalid", function(model, error){
-            console.log("**Validation Error : " + error + "**");
-        });
-        this.on("change:title", function(){
-            console.log('The title attribute has changed');
-        });
-    },
-    defaults: {
-        title: 'Book Titles',
-        author: 'No one',
-        year: 2000
-    },
-    printDetails: function(){
-        console.log(this.get('title') + ' by ' + this.get('author'));
-    },
-    validate: function(attrs) {
-        if (attrs.year<2000) {
-            return 'Year must be after 2000';
-        }
-        if (!attrs.title) {
-            return 'A title must be provided';
-        }
-    },
-    parse: function(response, xhr){
-        response.bookType = 'eBook';
-        return response;
-    }
-});
-
-Library = Backbone.Collection.extend({
-    model:Book,
-    url:'http://localhost:8080/books',
-    initialize: function(){
-        console.log('Creating a new Library');
-    }
-});
-
-//Define the Library View
-LibraryView = Backbone.View.extend({
-    initialize: function(){
-        this.render();
-        console.log('View created');
-    },
-    render:function(){
-        this.$el.html('Book Name: ' + this.model.get('title'));
-        return this;
-    }
-});
-
-// thisBook = new Book();
-// thisBook.save(thisBook.attributes, 
-//     {
-//         success: function(model, response, options) {
-//             console.log('Model saved');
-//             console.log('Id: '+ thisBook.get('id'));
-//         },
-//         error: function(model, xhr, options){
-//             console.log('Failed to save model');
-//         }
-//     });
-// thisBook.fetch({
-//     success: function(model, response, options){
-//         console.log(JSON.stringify(response));
-//         console.log(response);
-//         console.log('fetch success');
-//     },
-//     error: function(model, response, options){
-//         console.log('fetch error');
-//     }
-// });
-
-// thisBook.destroy({
-//     success: function(model, response, options) {
-//         console.log('destroy success');
-//     },
-//     error: function(model, response, options) {
-//         console.log('destroy failed');
-//     },
-//     wait: true
-// });
-
-book1 = new Book({title:'Beginning Backbone', author: 'James Sugrue', year:2001});
-book2 = new Book({title: 'Pro Javascript Design Pattern', author: 'Dus', year:2000});
-book3 = new Book({title: 'Pro Javascript Design Pattern 2', author: 'Dus', year:2000});
-thisLibrary = new Library([book1,book2,book3]);
-
-thisLibrary.forEach(function(model){
-    console.log('Book is called '+ model.get('title'));
-})
-var sortedByYear = thisLibrary.sortBy(function(model){
-    return model.get('year');
-});
-
-sortedByYear.forEach(function(model){
-    console.log('Book is called '+ model.get('title'));
-});
-
-
-var authors = thisLibrary.pluck('author');
-authors.forEach(function(authorName){
-    console.log(authorName);
-});
-
-var results = thisLibrary.where({author:'Dus'});
-console.log('Found: '+results.length+' matches');
-var result = thisLibrary.findWhere({author:'Dus'});
-console.log('Result: '+result.get('author'));
-
-var byPublished = thisLibrary.groupBy('year');
-thisLibrary.forEach(function(model){
-        console.log('Book is called ' + model.get('title'));
-});
-
-
-
-var myOnlineLibrary = new Library();
-myOnlineLibrary.fetch({
-    success:function(e){
-        console.log('get data');
-    },
-    error:function(e){
-        console.log('Wrong');
-    },
-    wait:true
-});
-
-
-/// VIEW
-var thisBook = new Book({title: 'Beginning Backbone', author: 'James Sugrue'});
-// create a instance of view
-var myView = new LibraryView({
-    model:thisBook,
-    el:'#myLibraryViewSection'
-});
-console.log(myView.el);
-</script>
+<!-- The 'main' for this app -->
+<script src="js/app/app.js"></script>
 </body>
 </html>
