--- a/index.html
+++ b/index.html
@@ -7,29 +7,55 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- any other css file here -->
 </head>
-<body class='metrouicss'>
+<body class="metro">
 <!-- HTML content and div placeholders-->
-<div id='timeline' class='timeline-view'>
-     <h2>My Tweets</h2>
+<div id="app" class="grid">
+    <div class="row">
+        <div class="span8"> 
+            <div id='timeline' class='timeline-view'>
+                <h2>My Tweets</h2>
+            </div>
+        </div>
+
+        <div class="span4">
+            <div id="profile" class="profile-view">
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Handlebars templates -->
 <script type="text/x-handlebars-template" id="timeline-template">
- <ul class='listview'>
-        {{#each tweet}}
-        <li>
-          <div class='icon'>
-            <img src='{{user.profile_image_url}}'></img>
+ <ul class='listview fluid'>
+    {{#each tweet}}
+    <li>
+      <div class='icon'>
+        <img src='{{user.profile_image_url}}'></img>
+    </div>
+    <div class='data'>
+      <h4>{{user.name}}</h4>
+      <p>{{format text}}</p>
+      <p class="timestamp"><i>{{friendlyDate}}</i></p>
+  </div>
+</li>
+{{/each}}
+</ul>
+</script>
+<!-- Template for profile -->
+<script type="text/x-handlebars-template" id="profile-template">
+ <div class='tiles clearfix'>
+    <div class="tile double bg-color-orangeDark">
+      <div class="tile-content">
+          <img src="{{user.profile_image_url}}" class="place-left">
+          <h3 style="margin-bottom: 5px;">{{user.name}}</h3>
+          <p>{{user.description}}</p>
+          <div class="brand">
+              <div class="badge">{{user.followers_count}} Followers</div>
           </div>
-            <div class='data'>
-              <h4>{{user.name}}</h4>
-              <p>{{format text}}</p>
-              <p class="timestamp"><i>{{friendlyDate}}</i></p>
-            </div>
-        </li>
-        {{/each}}
-    </ul>
- </script>
+      </div>
+    </div>
+  </div>
+</script>
 
 <!-- External library Includes -->
 <script src="js/external/jquery.js"></script>
@@ -43,6 +69,7 @@
 <script src="js/app/collection/Timeline.js"></script>
 <!-- View -->
 <script src="js/app/view/TimelineView.js"></script>
+<script src="js/app/view/ProfileView.js"></script>
 <!-- Router -->
 <!-- <script src="js/app/router/AppRouter.js"></script> -->
 <!-- Util --> 
